--- a/app/src/main/res/layout/activity_main___utama.xml
+++ b/app/src/main/res/layout/activity_main___utama.xml
@@ -2,35 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
      >
 
     <EditText
-        android:id="@+id/name"
-        android:layout_width="200dp"
+        android:id="@+id/first_name"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:hint="Nama " />
+        android:hint="Nama Depan " />
+
+    <EditText
+        android:id="@+id/last_name"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/first_name"
+        android:hint="Nama Belakang " />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/name"
-        android:hint="Email " />
+        android:layout_below="@+id/last_name"
+        android:gravity="top"
+        android:hint="Email"
+        android:inputType="textEmailAddress"/>
 
     <EditText
-        android:id="@+id/message"
+        android:id="@+id/pas"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@+id/name"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email"
         android:gravity="top"
-        android:hint="Bio" />
+        android:hint="Password"
+        android:inputType="textPassword"/>
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/signup"
+        android:layout_margin="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/message"
+        android:layout_below="@+id/pas"
         android:layout_centerHorizontal="true"
-        android:text="Sign Up" />
+        android:text="Sign Up"
+        android:onClick="signup"/>
 </RelativeLayout>
