--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,5 +54,22 @@
         android:layout_centerInParent="true"
         android:text="LOGOUT"
         android:onClick="logout"/>
+    <Button
+        android:id="@+id/schedulejob"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="scheduleJob"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/logout"
+        android:text="Schedule Job" />
+
+    <Button
+        android:id="@+id/canceljob"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/schedulejob"
+        android:layout_centerInParent="true"
+        android:onClick="cancelJob"
+        android:text="Cancel Job" />
 
 </RelativeLayout>
