Delete + Update Firebase 3-11-2019

--- a/app/src/main/res/layout/fragment_firebase.xml
+++ b/app/src/main/res/layout/fragment_firebase.xml
@@ -50,6 +50,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
+        android:id="@+id/editButton"
+        android:text="Edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button
         android:id="@+id/hapusButton"
         android:text="Hapus"
         android:layout_width="match_parent"
